--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,207 @@
+:root {
+	--bg-ul: #bac8ff;
+	--bg-shade-1: #91a7ff;
+	--bg-shade-2: #748ffc;
+	--bg-shade-3: #3b5bdb;
+
+	--text-white: #f2f2f2;
+	--text-black: #2b2c2e;
+
+	--button-green: #69db7c;
+	--button-green-shade: #40c057;
+	--button-green-shade-2: #2b8a3e;
+
+	--button-red: #ff8787;
+	--button-red-shade: #fa5252;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	height: 100vh;
+	color: #495057;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html {
+	/* font-size: 62.5%; */
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.header {
+	margin: 0 auto 2rem auto;
+	text-align: center;
+}
+
+.app {
+	position: relative;
+}
+
+ul {
+	width: 30rem;
+	height: 120%;
+	list-style: none;
+	background-color: var(--bg-ul);
+	border: 1px solid var(--bg-shade-2);
+	border-radius: 7px;
+	overflow-y: hidden;
+	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+li {
+	height: auto;
+
+	display: flex;
+
+	gap: 20px;
+	padding: 10px 20px;
+	/* margin: 2px; */
+
+	/* color: var(--text-white); */
+	color: var(--text-black);
+	/* backdrop-filter: blur(2px); */
+	background-color: var(--bg-ul);
+	border-left: 1px solid var(--bg-shade-3);
+	border-right: 1px solid var(--bg-shade-3);
+	border-top: 1px solid var(--bg-shade-3);
+}
+
+.todo {
+	max-width: 65%;
+}
+
+li:last-child {
+	border-bottom: 1px solid var(--bg-shade-3);
+}
+
+li p:last-child {
+	margin-left: auto;
+}
+
+.buttonRow {
+	margin-top: 2rem;
+	display: flex;
+	justify-content: space-between;
+}
+
+button {
+	padding: 0.8rem 1.2rem;
+	background-color: var(--bg-shade-2);
+	color: var(--text-black);
+	border: none;
+	border-radius: 7px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: 0.3s;
+	text-align: center;
+}
+
+button:hover {
+	background-color: var(--bg-shade-3);
+}
+
+.edit-button-container {
+	position: absolute;
+	display: flex;
+	right: -150px;
+	width: 200px;
+	height: 50px;
+	overflow: hidden;
+	transform: translate(50px, -10px);
+}
+
+.editButton,
+.deleteButton {
+	position: absolute;
+	text-align: center;
+	left: 100%;
+	transform: translate(-300px, 0);
+	transition: transform 0.4s ease-in-out;
+}
+
+.editButton.shown {
+	/* display: block; */
+	transform: translate(-190px, 0);
+	z-index: 1;
+}
+
+.deleteButton.shown {
+	/* display: block; */
+	transform: translate(-120px, 0);
+	z-index: 1;
+}
+
+.green {
+	background-color: var(--button-green) !important;
+}
+
+.green:hover {
+	background-color: var(--button-green-shade) !important;
+}
+
+.red {
+	background-color: var(--button-red) !important;
+}
+
+.red:hover {
+	background-color: var(--button-red-shade) !important;
+}
+
+.block {
+	display: block;
+}
+
+.form-add-task {
+	width: auto;
+	display: flex;
+	justify-content: space-between;
+}
+
+.form-add-task input {
+	width: 10rem;
+	border: 1px solid var(--bg-shade-2);
+	border-radius: 7px;
+	background-color: var(--text-white);
+	padding: 10px;
+
+	transition: width 0.4s ease-in-out;
+}
+
+.form-add-task input:focus {
+	outline: 2px solid var(--bg-shade-3);
+	width: 80%;
+}
+
+.empty-list {
+	justify-content: center;
+	text-align: center;
+	font-size: 1.2rem;
+	font-weight: bold;
+}
+
+input[type="checkbox"] {
+	width: 20px;
+	border: 1px solid var(--bg-shade-2);
+	accent-color: var(--button-green-shade-2);
+}
+
+.crossed {
+	text-decoration: line-through;
+	background-color: var(--button-green);
+}
+
+.selected {
+	background-color: var(--bg-shade-2);
 }
